# Miniprojekti-ryhm-1

./: .coverage  .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  index.html  pyproject.toml  raportti.md  retro.md
.github/: CODEOWNER
.github/workflows/: test.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_app_py.html  z_145eef247bfb46b6_db_helper_py.html  z_145eef247bfb46b6_util_py.html
src/: app.py  config.py  db_helper.py  schema.sql  util.py
src/entities/: viite.py
src/repositories/: viite_repository.py
src/static/: style.css
src/story_tests/: 01_add.robot  02_edit.robot  03_search.robot  04_delete.robot  05_download.robot  resource.robot
src/templates/: add.html  add_article.html  add_book.html  add_inproceedings.html  add_misc.html  edit_article.html  edit_book.html  edit_inproceedings.html  edit_misc.html  get_references.html  index.html
src/tests/: test_app.py  test_db_helper.py  test_home.py  test_util.py  test_validate_viite.py
