[project]
name = "miniprojekti-ryhm-1"
version = "0.1.0"
description = ""
authors = [
    {name = "bjornKhermik10",email = "bjorn.khermik@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "getenv (>=0.2.0,<0.3.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "robotframework (>=7.3.2,<8.0.0)",
    "robotframework-seleniumlibrary (>=6.8.0,<7.0.0)"
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
